language/move-lang/tests/move_check/parser/module_missing_lbrace.exp
error: 

   ┌── tests/move_check/parser/module_missing_lbrace.move:2:5 ───
   │
 2 │     f() {}
   │     ^ Unexpected token: 'f'
   ·
 2 │     f() {}
   │     - Expected: '{'
   │

